<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_height"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/small_avatar"
                    android:layout_width="@dimen/small_avatar_size"
                    android:layout_height="@dimen/small_avatar_size"
                    android:layout_marginStart="64dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/toolbar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif"
                    android:text="用户名"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:elevation="4dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="用户名"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/signature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="此刻的心情：想换头像"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/dynamic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/dynamic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/follow"
                    app:layout_constraintTop_toBottomOf="@id/signature" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/follow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/follow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/dynamic"
                    app:layout_constraintRight_toLeftOf="@+id/fans"
                    app:layout_constraintTop_toBottomOf="@id/signature" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/fans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/fans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/follow"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signature" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/about" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/night" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:text="@string/update" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:text="@string/logout"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/big_avatar"
        android:layout_width="@dimen/big_avatar_size"
        android:layout_height="@dimen/big_avatar_size"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|center_horizontal" />

</android.support.design.widget.CoordinatorLayout>